增加了users相关的页面和caching页面，调整了官方网站升级的部分代码对应

--- a/projects/deepphpoop/repository/caching.html
+++ b/projects/deepphpoop/repository/caching.html
@@ -5,12 +5,14 @@
     <meta content="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" name="csrf-token" />
     <meta charset='utf-8'>
     <meta content='width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1' name='viewport'>
-    <title>treetree - Deploy</title>
+    <title>DeepPHPOOP - treetree - Deploy</title>
     <link href="/assets/css/7257492/624966/css/fonts.css" media="screen" rel="stylesheet" />
     <link href="/assets/css/application-4abd7d5764f0748a74fcf362045c3021.css" media="screen" rel="stylesheet" />
     <link href='/assets/images/favicon.png' rel='icon' style='image/png'>
+    <meta content='deepphpoop' name='project-id'>
+    <link href='/projects/deepphpoop/deployments.rss?token=u2c0ljxymnztvid2l99yx0wbogc8g3the4e3tkr7' rel='alternate' title='Deployment History for DeepPHPOOP' type='application/rss+xml'>
 </head>
-<body class='js-projects-index'>
+<body class='js-repositories-caching'>
 <div class='header'>
     <div class='header__inner'>
         <div class='container'>
@@ -58,70 +60,69 @@
         </div>
     </nav>
 </div>
+<div class='second-navigation js-nav-bar is-menu-closed'>
+    <div class='container u-clearfix'>
+        <div class='second-navigation__title'>
+            <a class="g-text-semibold" href="/projects/deepphpoop">DeepPHPOOP</a>
+        </div>
+        <a class="second-navigation__toggle js-toggle-menu" href="#"><img alt="Menu Icon" class="second-navigation__toggle-img second-navigation__toggle-img--open" src="/assets/images/icon-menu-2eb971600fbdab538bd350931cbd5fe8.svg" />
+            <img alt="Menu Icon" class="second-navigation__toggle-img second-navigation__toggle-img--hide" src="/assets/images/icon-hide-3ee2bdbbde6b0a782e4c8d23241bccf6.svg" />
+        </a><ul class='second-menu'>
+        <li class='second-menu__item'>
+            <a class="second-menu__link" href="/projects/deepphpoop/deployments">Deployments</a>
+        </li>
+        <li class='second-menu__item is-dropdown'>
+            <a class="second-menu__link second-menu__link--dropdown" href="/projects/deepphpoop/edit">Settings</a>
+            <ul class='sub-menu box box--heavy'>
+                <li class='sub-menu__item'>
+                    <a class="sub-menu__link" href="/projects/deepphpoop/edit">General Settings</a>
+                </li>
+                <li class='sub-menu__item'>
+                    <a class="sub-menu__link" href="/projects/deepphpoop/servers">Servers &amp; Groups</a>
+                </li>
+                <li class='sub-menu__item'>
+                    <a class="sub-menu__link" href="/projects/deepphpoop/config_files">Config Files</a>
+                </li>
+                <li class='sub-menu__item'>
+                    <a class="sub-menu__link" href="/projects/deepphpoop/excluded_files">Excluded Files</a>
+                </li>
+                <li class='sub-menu__item'>
+                    <a class="sub-menu__link" href="/projects/deepphpoop/notifications">Notifications</a>
+                </li>
+                <li class='sub-menu__item'>
+                    <a class="sub-menu__link" href="/projects/deepphpoop/commands">SSH Commands</a>
+                </li>
+            </ul>
+        </li>
+        <li class='second-menu__item'>
+            <a href="https://github.com/shukai0828/DeepPHPOOP/tree/master">Browse Repository</a>
+        </li>
+        <li class='second-menu__item'>
+            <a href="https://github.com/shukai0828/DeepPHPOOP/commits/master">View Commits</a>
+        </li>
+        <li class='second-menu__item second-menu__item--deploy'>
+            <a href="/projects/deepphpoop/deployments/new">Deploy Now</a>
+        </li>
+    </ul>
+    </div>
+</div>
 
+
+<div class='container'>
+    <div class='flash flash--spaced flash--neutral'>
+        <p>This project was last deployed 2 days ago to <strong>RoyalWebHosting</strong>. <a href="/projects/deepphpoop/deployments/6ac8f26c-17b6-8610-a1a5-8d6c240e3d0f">View details</a>.</p>
+    </div>
+
+</div>
 <div class='container clearfix'>
 
-    <div class='flash flash--notice flash--spaced'>
-        <p class='flash__close'><a class="flash__close-link" data-dismiss=".flash" data-method="post" href="/users/3471e5ea-a920-5641-1ed9-16609e345521/hide_notice" rel="nofollow" title="Hide this message">Hide</a></p>
-        <h3 class='g-heading-gamma'>Deploy 2.0 is coming...</h3>
-        <p>We've been hard at work on the latest version of Deploy. Read about it here <a href='http://blog.atechmedia.com/introducing-deploy-2-0/'>on our blog</a> or get involved in the <a href='https://{{current_account}}.beta.deployhq.com'>open beta</a>.</p>
+    <p class='page-back'><a class="page-back__link" href="/projects/deepphpoop/deployments">&#8592; Back to deployments list</a></p>
+    <div class='box section section--first content-block'>
+        <h2 class='g-heading-alpha'>Caching your repository</h2>
+        <p>Whenever you tell us about one of your repositories we have to store a copy of it on our servers. This allows us to quickly access your commit history and files whenever you wish to deploy the project. If you have a large repository and you may need to wait for it to finish before you can run your first deployment.</p>
+        <p>If you change your repository URL at any point, we'll also need to download a new repository. This process can take time too so please be patient while waiting for it to happen.</p>
+        <p>We store all your information securely on our servers and full information can be found in our privacy policy.</p>
     </div>
-    <div class='box section section--first section--with-create'>
-        <a class="button button--positive button--create section__create" href="/projects/new" title="Create a new project"><img alt="Icon add" class="button__icon" src="/assets/images/icon-add-e0280f31016ead5fa85f6969fbd6f2db.svg" /></a>
-        <div class='page-header'>
-            <h2 class='page-header__title g-heading-alpha'>Your Projects</h2>
-            <p class='page-header__lead'>
-                The list below shows all the projects which are currently set up for this account.
-                Click on a project to view further details or select 'Deploy Now' to be taken straight to the new deployment screen.
-            </p>
-        </div>
-    </div>
-    <div class='clearfix'>
-        <form accept-charset="UTF-8" action="/users/3471e5ea-a920-5641-1ed9-16609e345521/projects_sort_preference" class="order-preference" id="user_project_sort" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div><div class='action-block clearfix'>
-            <div class='action-block__sort radio-block js-project-sort'>
-                <strong class='radio-block__label'>Sort:</strong>
-                <label class="radio-block__group" for="user_alphabetic_sort_true"><input class="radio-block__input" id="user_alphabetic_sort_true" name="user[alphabetic_sort]" type="radio" value="true" />
-                    <span>Alphabetically</span>
-                </label><label class="radio-block__group" for="user_alphabetic_sort_false"><input checked="checked" class="radio-block__input" id="user_alphabetic_sort_false" name="user[alphabetic_sort]" type="radio" value="false" />
-                <span>Recently Deployed</span>
-            </label></div>
-        </div>
-        </form>
-
-        <form accept-charset="UTF-8" action="/users/3471e5ea-a920-5641-1ed9-16609e345521/projects_view_preference" class="edit_user" id="user_project_view" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div><ul class='view-preference layout-list clearfix box'>
-            <li class='view-preference__item'>
-                <a class="view-preference__link  js-view-preference" href="#"><img alt="Icon list table" class="view-preference__icon" src="/assets/images/icon-list-table-1d3083531e7d60e4677a1f896aa3e3cb.svg" /></a>
-                <input class="is-hidden" id="user_compact_view_true" name="user[compact_view]" type="radio" value="true" />
-            </li>
-            <li class='view-preference__item'>
-                <a class="view-preference__link is-active js-view-preference" href="#"><img alt="Icon list block white" class="view-preference__icon" src="/assets/images/icon-list-block-white-f9dfb5ef9ca2d4b6f399d1e61e04c048.svg" /></a>
-                <input checked="checked" class="is-hidden" id="user_compact_view_false" name="user[compact_view]" type="radio" value="false" />
-            </li>
-        </ul>
-        </form>
-
-    </div>
-    <ul class='project-listings layout-list clearfix js-project-list'>
-        <li class='project-listing js-project' data-last-deployed='1420966178' data-name='DeepPHPOOP'>
-            <div class='box'>
-                <h3 class='g-heading-beta project-listing__name'><a href="/projects/deepphpoop">DeepPHPOOP</a></h3>
-                <div class='project-listing__bar'>
-                    <div class='project-listing__deployments'>
-                        <span class='project-listing__count'>3</span>
-                        <span class='project-listing__count-title'>Deployments</span>
-                    </div>
-                    <div class='project-listing__servers'>
-                        <span class='project-listing__count'>1</span>
-                        <span class='project-listing__count-title'>Servers</span>
-                    </div>
-                    <div class='project-listing__deploy'>
-                        <a class="project-listing__deploy-button" href="/projects/deepphpoop/deployments/new">Deploy</a>
-                    </div>
-                </div>
-            </div>
-        </li>
-
-    </ul>
 
 </div>
 <div class='footer'>
@@ -168,7 +169,7 @@
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Report Bug</h2>
                     <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div>
-                        <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/projects?action=index&amp;controller=projects" />
+                        <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/projects/deepphpoop/repository/caching?action=caching&amp;controller=repositories&amp;project_id=deepphpoop" />
                         <div class='form-group'>
                             <label class="form-label" for="description">Describe Problem</label>
 <textarea class="textarea" id="description" name="description" rows="6">
@@ -213,12 +214,12 @@
 <script>
     //<![CDATA[
     window.Utility || (window.Utility = {});
-    Utility.RailsVars = {"user_timezone":"Etc/UTC","vwp_token":"13c9299896384ac5ac3cf68c"};
+    Utility.RailsVars = {"user_timezone":"Etc/UTC","vwp_token":"13c9299896384ac5ac3cf68c","project":"deepphpoop"};
 
     (function() {
-        window.$this = new (App.Projects || App.Base)();
-        if (typeof $this.index === 'function') {
-            return $this.index.call();
+        window.$this = new (App.Repositories || App.Base)();
+        if (typeof $this.caching === 'function') {
+            return $this.caching.call();
         }
     })();
 
@@ -231,12 +232,12 @@
     atechIdentity.host = 'http://pt.justdeployit.com';
     atechIdentity.userKey = '3b2662a4-843b-798f-417b-5755dda2e195';
     atechIdentity.applicationKey = '2a9869df-7c90-3f32-0538-0bec6f4c4129';
-    atechIdentity.expiry = 1421159698;
-    atechIdentity.authHash = 'f4e4c577928fb2de9432c3038e33d2e26c1135ef';
+    atechIdentity.expiry = 1421164783;
+    atechIdentity.authHash = 'e8bcc555f6aefb525bcaa4ce5cf22c829b6cdddb';
     atechIdentity.getRemoteUserData();
     //]]>
 </script>
 
-<!--- Version 741d36, served by vdtapp-531-9150-c84123b028 -->
+<!--- Version b725e2, served by vdtapp-531-9157-e0d0793ee4 -->
 </body>
 </html>
