--- a/projects_edit.html
+++ b/projects_edit.html
@@ -2,15 +2,15 @@
 <html lang='en'>
 <head>
     <meta content="authenticity_token" name="csrf-param" />
-    <meta content="wfMiVhNXMb+ooNQ01R8PX1mNVqnbYdm1WCt9k1EsHX8=" name="csrf-token" />
+    <meta content="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" name="csrf-token" />
     <meta charset='utf-8'>
     <meta content='width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1' name='viewport'>
     <title>DeepPHPOOP - treetree - Deploy</title>
-    <link href="/assets/css/fonts.css" media="screen" rel="stylesheet" />
-    <link href="/assets/css/application-5c814444b583f3014ed8cbb0e1cb3ff6.css" media="screen" rel="stylesheet" />
-    <link href='/assets/images/favicon.png' rel='icon' style='image:png'>
+    <link href="/assets/css/7257492/624966/css/fonts.css" media="screen" rel="stylesheet" />
+    <link href="/assets/css/application-4abd7d5764f0748a74fcf362045c3021.css" media="screen" rel="stylesheet" />
+    <link href='/assets/images/favicon.png' rel='icon' style='image/png'>
     <meta content='deepphpoop' name='project-id'>
-    <link href='/servers_deployments.rss?token=u2c0ljxymnztvid2l99yx0wbogc8g3the4e3tkr7' rel='alternate' title='Deployment History for DeepPHPOOP' type='application/rss+xml'>
+    <link href='/projects/deepphpoop/deployments.rss?token=u2c0ljxymnztvid2l99yx0wbogc8g3the4e3tkr7' rel='alternate' title='Deployment History for DeepPHPOOP' type='application/rss+xml'>
 </head>
 <body class='js-projects-edit'>
 <div class='header'>
@@ -28,11 +28,11 @@
                             <span class='main-menu__text'>Projects</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/account"><img alt="Accounts Icon" class="main-menu__icon" src="/assets/images/icon-accounts-5573fc3b8b4b9b204d48ac0d24eb1799.svg" />
-                            <span class='main-menu__text'>Accounts</span>
+                        <a class="main-menu__link" href="/account"><img alt="Account icon" class="main-menu__icon" src="/assets/images/icon-accounts-5573fc3b8b4b9b204d48ac0d24eb1799.svg" />
+                            <span class='main-menu__text'>Account</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/users"><img alt="Users Icon" class="main-menu__icon" src="/assets/images/icon-users-4d09e071ba1c6eed77353183a91a9e9c.svg" />
+                        <a class="main-menu__link" href="/users"><img alt="Users icon" class="main-menu__icon" src="/assets/images/icon-users-4d09e071ba1c6eed77353183a91a9e9c.svg" />
                             <span class='main-menu__text'>Users</span>
                         </a></li>
                 </ul>
@@ -71,10 +71,10 @@
         <li class='second-menu__item'>
             <a class="second-menu__link" href="/projects/deepphpoop/deployments">Deployments</a>
         </li>
-        <li class='second-menu__item is-dropdown'>
+        <li class='is-active is-dropdown second-menu__item'>
             <a class="second-menu__link second-menu__link--dropdown" href="/projects/deepphpoop/edit">Settings</a>
             <ul class='sub-menu box box--heavy'>
-                <li class='sub-menu__item'>
+                <li class='is-active sub-menu__item'>
                     <a class="sub-menu__link" href="/projects/deepphpoop/edit">General Settings</a>
                 </li>
                 <li class='sub-menu__item'>
@@ -110,18 +110,14 @@
 
 <div class='container'>
     <div class='flash flash--spaced flash--neutral'>
-        <p>This project was last deployed about 11 hours ago to <strong>RoyalWebHosting</strong>. <a href="/projects/deepphpoop/deployments/00055b1b-b4ae-3676-2ada-ad604107a099">View details</a>.</p>
-    </div>
-    <div class='flash flash--spaced flash--pending'>
-        <p>Caching repository in progress. <a href="/projects/deepphpoop/repository/caching">What does this mean?</a>.</p>
+        <p>This project was last deployed 2 days ago to <strong>RoyalWebHosting</strong>. <a href="/projects/deepphpoop/deployments/6ac8f26c-17b6-8610-a1a5-8d6c240e3d0f">View details</a>.</p>
     </div>
 
 </div>
 <div class='container clearfix'>
-    <div class="flash flash--spaced flash--success"><p>Project has been updated successfully!</p></div>
-    <div class="flash flash--spaced flash--success"><p>A repository recache has been initiated successfully.</p></div>
+
     <div class='content--constrained'>
-        <form accept-charset="UTF-8" action="/projects/deepphpoop" class="edit_project" id="edit_project_91546" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="wfMiVhNXMb+ooNQ01R8PX1mNVqnbYdm1WCt9k1EsHX8=" /></div><div class='section section--first section--skinny box'>
+        <form accept-charset="UTF-8" action="/projects/deepphpoop" class="edit_project" id="edit_project_91546" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div><div class='section section--first section--skinny box'>
             <h2 class='form-heading'>Project Settings</h2>
             <div class='form-group'>
                 <label class="form-label" for="project_name">Name</label>
@@ -130,7 +126,7 @@
             </div>
             <div class='form-group'>
                 <label class="form-label" for="project_notification_email">Notification Email Address</label>
-                <input class="form-control" id="project_notification_email" name="project[notification_email]" type="text" />
+                <input class="form-control" id="project_notification_email" name="project[notification_email]" type="text" value="treetree1303@gmail.com" />
                 <p class='form-hint'>Leave blank to use users email address.</p>
             </div>
         </div>
@@ -282,7 +278,7 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Report Bug</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Report Bug</h2>
-                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="wfMiVhNXMb+ooNQ01R8PX1mNVqnbYdm1WCt9k1EsHX8=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div>
                         <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/projects/deepphpoop/edit?action=edit&amp;controller=projects&amp;id=deepphpoop" />
                         <div class='form-group'>
                             <label class="form-label" for="description">Describe Problem</label>
@@ -304,7 +300,7 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Feedback</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Submit Feedback</h2>
-                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="wfMiVhNXMb+ooNQ01R8PX1mNVqnbYdm1WCt9k1EsHX8=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div>
                         <div class='form-group'>
                             <label class="form-label" for="summary">What do you think?</label>
 <textarea class="textarea" id="description" name="description" rows="6">
@@ -324,11 +320,11 @@
 </div>
 
 <script src="/assets/js/cdn.viaduct.io/webpush.js"></script>
-<script src="/assets/js/application-e862757933c6bd8eeafac280f820e01c.js"></script>
+<script src="/assets/js/application-4050524b872d18d5132f11c99b6d4bf2.js"></script>
 <script>
     //<![CDATA[
     window.Utility || (window.Utility = {});
-    Utility.RailsVars = {"user_timezone":null,"vwp_token":"13c9299896384ac5ac3cf68c","project":"deepphpoop"};
+    Utility.RailsVars = {"user_timezone":"Etc/UTC","vwp_token":"13c9299896384ac5ac3cf68c","project":"deepphpoop"};
 
     (function() {
         window.$this = new (App.Projects || App.Base)();
@@ -346,12 +342,12 @@
     atechIdentity.host = 'http://pt.justdeployit.com';
     atechIdentity.userKey = '3b2662a4-843b-798f-417b-5755dda2e195';
     atechIdentity.applicationKey = '2a9869df-7c90-3f32-0538-0bec6f4c4129';
-    atechIdentity.expiry = 1420939250;
-    atechIdentity.authHash = '4476b69bec4a0c644abd97c7fc03652745220136';
+    atechIdentity.expiry = 1421163244;
+    atechIdentity.authHash = 'c8977d68bcf77b20e6bbaba32f75b773aecfd63e';
     atechIdentity.getRemoteUserData();
     //]]>
 </script>
 
-<!--- Version 23fc98, served by vdtapp-531-8977-b20c049ef8 -->
+<!--- Version b725e2, served by vdtapp-531-9156-bdb94a2da9 -->
 </body>
 </html>
