--- a/index_list.html
+++ b/index_list.html
@@ -2,13 +2,13 @@
 <html lang='en'>
 <head>
     <meta content="authenticity_token" name="csrf-param" />
-    <meta content="hCBCVjuHS1LiQhvPKI9TXQFfxx4W5W8ql3IgroD+9js=" name="csrf-token" />
+    <meta content="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" name="csrf-token" />
     <meta charset='utf-8'>
     <meta content='width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1' name='viewport'>
     <title>treetree - Deploy</title>
-    <link href="/assets/css/fonts.css" media="screen" rel="stylesheet" />
-    <link href="/assets/css/application-5c814444b583f3014ed8cbb0e1cb3ff6.css" media="screen" rel="stylesheet" />
-    <link href='/assets/images/favicon.png' rel='icon' style='image:png'>
+    <link href="/assets/cloud.typography.com/7257492/624966/css/fonts.css" media="screen" rel="stylesheet" />
+    <link href="/assets/application-c2577e410b34fa9f4ea1e85a71113b0f.css" media="screen" rel="stylesheet" />
+    <link href='/images/favicon.png' rel='icon' style='image/png'>
 </head>
 <body class='js-dashboard-index'>
 <div class='header'>
@@ -18,25 +18,25 @@
             <nav class='main-menu'>
                 <ul class='inline-list'>
                     <li class='inline-list__item is-active main-menu__item'>
-                        <a class="main-menu__link" href="/"><img alt="Dashboard Icon" class="main-menu__icon" src="/assets/images/icon-dashboard-b7fc48923a8411a5354a81b66e34b692.svg" />
+                        <a class="main-menu__link" href="/"><img alt="Dashboard Icon" class="main-menu__icon" src="/assets/icon-dashboard-b7fc48923a8411a5354a81b66e34b692.svg" />
                             <span class='main-menu__text'>Dashboard</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/projects"><img alt="Projects Icon" class="main-menu__icon" src="/assets/images/icon-projects-f2e21fdd8c1a0dfc1b7e438396263705.svg" />
+                        <a class="main-menu__link" href="/projects"><img alt="Projects Icon" class="main-menu__icon" src="/assets/icon-projects-f2e21fdd8c1a0dfc1b7e438396263705.svg" />
                             <span class='main-menu__text'>Projects</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/account"><img alt="Accounts Icon" class="main-menu__icon" src="/assets/images/icon-accounts-5573fc3b8b4b9b204d48ac0d24eb1799.svg" />
-                            <span class='main-menu__text'>Accounts</span>
+                        <a class="main-menu__link" href="/account"><img alt="Account icon" class="main-menu__icon" src="/assets/icon-accounts-5573fc3b8b4b9b204d48ac0d24eb1799.svg" />
+                            <span class='main-menu__text'>Account</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/users"><img alt="Users Icon" class="main-menu__icon" src="/assets/images/icon-users-4d09e071ba1c6eed77353183a91a9e9c.svg" />
+                        <a class="main-menu__link" href="/users"><img alt="Users icon" class="main-menu__icon" src="/assets/icon-users-4d09e071ba1c6eed77353183a91a9e9c.svg" />
                             <span class='main-menu__text'>Users</span>
                         </a></li>
                 </ul>
             </nav>
             <div class='user-menu'>
-                <a class="js-toggle-nav" href="#" rel="nofollow"><img alt="shukai zhao&#39;s Avatar" class="user-menu__icon avatar-image" src="/assets/images/avatar.png" />
+                <a class="js-toggle-nav" href="#" rel="nofollow"><img alt="shukai zhao&#39;s Avatar" class="user-menu__icon avatar-image" src="/images/avatar.png" />
                 </a></div>
         </div>
     </div>
@@ -72,7 +72,7 @@
     <div class='content--constrained'>
         <div class='box section section--first section--skinny'>
             <h3 class='g-heading-beta'>Recent Activity</h3>
-            <h4 class='g-heading-gamma feed-heading'>Today</h4>
+            <h4 class='g-heading-gamma feed-heading'>11 January</h4>
             <ul class='feed layout-list'>
                 <li class='feed-item feed-item--positive'>
                     <a class="feed-item__inner clearfix" href="/projects/deepphpoop/deployments/6ac8f26c-17b6-8610-a1a5-8d6c240e3d0f"><p class='feed-item__message'>
@@ -84,7 +84,7 @@ DeepPHPOOP
 </span>
                     </a></li>
             </ul>
-            <h4 class='g-heading-gamma feed-heading'>Yesterday</h4>
+            <h4 class='g-heading-gamma feed-heading'>10 January</h4>
             <ul class='feed layout-list'>
                 <li class='feed-item feed-item--negative'>
                     <a class="feed-item__inner clearfix" href="/projects/deepphpoop/deployments/00055b1b-b4ae-3676-2ada-ad604107a099"><p class='feed-item__message'>
@@ -149,8 +149,8 @@ DeepPHPOOP
         </div>
         <ul class='project-list layout-list box js-starred-projects'>
             <li class='project-list__item project-list__item--starred'>
-                <a class="project-list__action js-star-project" href="/projects/deepphpoop/star"><img alt="Icon star empty" class="project-list__icon project-list__star" src="/assets/images/icon-star-empty-983228f419b166694a1f89f859051c01.svg" title="Star Project" />
-                    <img alt="Icon star filled" class="project-list__icon project-list__unstar" src="/assets/images/icon-star-filled-16fc7e710d631c5bd1e26ae07ea4f816.svg" title="Unstar Project" />
+                <a class="project-list__action js-star-project" href="/projects/deepphpoop/star"><img alt="Icon star empty" class="project-list__icon project-list__star" src="/assets/icon-star-empty-983228f419b166694a1f89f859051c01.svg" title="Star Project" />
+                    <img alt="Icon star filled" class="project-list__icon project-list__unstar" src="/assets/icon-star-filled-16fc7e710d631c5bd1e26ae07ea4f816.svg" title="Unstar Project" />
                 </a><a class="project-list__link" href="/projects/deepphpoop">DeepPHPOOP</a>
             </li>
 
@@ -194,7 +194,7 @@ DeepPHPOOP
                 </ul>
             </div>
             <div class='column column--quarter'>
-                <a class="footer__branding" href="http://atechmedia.com"><img alt="Atechmedia logo" src="/assets/images/atechmedia-logo-0c4d3f231c616ea3edec833d64afb407.png" /></a>
+                <a class="footer__branding" href="http://atechmedia.com"><img alt="Atechmedia logo" src="/assets/atechmedia-logo-0c4d3f231c616ea3edec833d64afb407.png" /></a>
             </div>
         </div>
         <p class='footer__copyright'>&copy; 2015 <a href="http://atechmedia.com">aTech Media Limited</a>. All rights reserved.</p>
@@ -208,11 +208,12 @@ DeepPHPOOP
                 <a class="feedback-list__link js-feedback-form" href="#">Report Bug</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Report Bug</h2>
-                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="hCBCVjuHS1LiQhvPKI9TXQFfxx4W5W8ql3IgroD+9js=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div>
                         <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/?action=index&amp;controller=dashboard" />
                         <div class='form-group'>
                             <label class="form-label" for="description">Describe Problem</label>
-                            <textarea class="textarea" id="description" name="description" rows="6"></textarea>
+<textarea class="textarea" id="description" name="description" rows="6">
+</textarea>
                             <p class='form-hint'>Please describe the bug you are experiencing.</p>
                         </div>
                         <div class='form-group'>
@@ -229,13 +230,15 @@ DeepPHPOOP
                 <a class="feedback-list__link js-feedback-form" href="#">Feedback</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Submit Feedback</h2>
-                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="hCBCVjuHS1LiQhvPKI9TXQFfxx4W5W8ql3IgroD+9js=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div>
                         <div class='form-group'>
                             <label class="form-label" for="summary">What do you think?</label>
-                            <textarea class="textarea" id="description" name="description" rows="6"></textarea>
+<textarea class="textarea" id="description" name="description" rows="6">
+</textarea>
                         </div>
                         <button class="button button--positive button--small" name="button" type="Submit">Send</button>
                     </form>
+
                 </div>
             </li>
         </ul>
@@ -246,12 +249,12 @@ DeepPHPOOP
     </div>
 </div>
 
-<script src="/assets/js/cdn.viaduct.io/webpush.js"></script>
-<script src="/assets/js/application-e862757933c6bd8eeafac280f820e01c.js"></script>
+<script src="/assets/cdn.viaduct.io/webpush.js"></script>
+<script src="/assets/application-4490436fc5ec79a05e570d20adf462b5.js"></script>
 <script>
     //<![CDATA[
     window.Utility || (window.Utility = {});
-    Utility.RailsVars = {"user_timezone":null,"vwp_token":"13c9299896384ac5ac3cf68c"};
+    Utility.RailsVars = {"user_timezone":"Etc/UTC","vwp_token":"13c9299896384ac5ac3cf68c"};
 
     (function() {
         window.$this = new (App.Dashboard || App.Base)();
@@ -259,21 +262,22 @@ DeepPHPOOP
             return $this.index.call();
         }
     })();
+
     //]]>
 </script>
-<script src='/assets/js/identity/remote.js' type='text/javascript'></script>
+<script src='/assets/identity.atechmedia.com/javascripts/remote.js' type='text/javascript'></script>
 <script>
     //<![CDATA[
     var atechIdentity = new AtechIdentity();
     atechIdentity.host = 'http://pt.justdeployit.com';
     atechIdentity.userKey = '3b2662a4-843b-798f-417b-5755dda2e195';
     atechIdentity.applicationKey = '2a9869df-7c90-3f32-0538-0bec6f4c4129';
-    atechIdentity.expiry = 1420902610;
-    atechIdentity.authHash = 'ff21662b3371194c9e8880a7a0724c2f8132aff1';
+    atechIdentity.expiry = 1421305869;
+    atechIdentity.authHash = '6dca1fc636e61d743d527401468492eed244616e';
     atechIdentity.getRemoteUserData();
     //]]>
 </script>
 
-<!--- Version 23fc98, served by vdtapp-531-8977-b20c049ef8 -->
+<!--- Version 4f2bf0, served by vdtapp-531-9175-535458ff20 -->
 </body>
 </html>
