--- a/projects_index_list.html
+++ b/projects_index_list.html
@@ -2,13 +2,13 @@
 <html lang='en'>
 <head>
     <meta content="authenticity_token" name="csrf-param" />
-    <meta content="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" name="csrf-token" />
+    <meta content="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" name="csrf-token" />
     <meta charset='utf-8'>
     <meta content='width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1' name='viewport'>
     <title>treetree - Deploy</title>
-    <link href="/assets/css/7257492/624966/css/fonts.css" media="screen" rel="stylesheet" />
-    <link href="/assets/css/application-4abd7d5764f0748a74fcf362045c3021.css" media="screen" rel="stylesheet" />
-    <link href='/assets/images/favicon.png' rel='icon' style='image/png'>
+    <link href="/assets/cloud.typography.com/7257492/624966/css/fonts.css" media="screen" rel="stylesheet" />
+    <link href="/assets/application-c2577e410b34fa9f4ea1e85a71113b0f.css" media="screen" rel="stylesheet" />
+    <link href='/images/favicon.png' rel='icon' style='image/png'>
 </head>
 <body class='js-projects-index'>
 <div class='header'>
@@ -18,25 +18,25 @@
             <nav class='main-menu'>
                 <ul class='inline-list'>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/"><img alt="Dashboard Icon" class="main-menu__icon" src="/assets/images/icon-dashboard-b7fc48923a8411a5354a81b66e34b692.svg" />
+                        <a class="main-menu__link" href="/"><img alt="Dashboard Icon" class="main-menu__icon" src="/assets/icon-dashboard-b7fc48923a8411a5354a81b66e34b692.svg" />
                             <span class='main-menu__text'>Dashboard</span>
                         </a></li>
                     <li class='inline-list__item is-active main-menu__item'>
-                        <a class="main-menu__link" href="/projects"><img alt="Projects Icon" class="main-menu__icon" src="/assets/images/icon-projects-f2e21fdd8c1a0dfc1b7e438396263705.svg" />
+                        <a class="main-menu__link" href="/projects"><img alt="Projects Icon" class="main-menu__icon" src="/assets/icon-projects-f2e21fdd8c1a0dfc1b7e438396263705.svg" />
                             <span class='main-menu__text'>Projects</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/account"><img alt="Account icon" class="main-menu__icon" src="/assets/images/icon-accounts-5573fc3b8b4b9b204d48ac0d24eb1799.svg" />
+                        <a class="main-menu__link" href="/account"><img alt="Account icon" class="main-menu__icon" src="/assets/icon-accounts-5573fc3b8b4b9b204d48ac0d24eb1799.svg" />
                             <span class='main-menu__text'>Account</span>
                         </a></li>
                     <li class='inline-list__item main-menu__item'>
-                        <a class="main-menu__link" href="/users"><img alt="Users icon" class="main-menu__icon" src="/assets/images/icon-users-4d09e071ba1c6eed77353183a91a9e9c.svg" />
+                        <a class="main-menu__link" href="/users"><img alt="Users icon" class="main-menu__icon" src="/assets/icon-users-4d09e071ba1c6eed77353183a91a9e9c.svg" />
                             <span class='main-menu__text'>Users</span>
                         </a></li>
                 </ul>
             </nav>
             <div class='user-menu'>
-                <a class="js-toggle-nav" href="#" rel="nofollow"><img alt="shukai zhao&#39;s Avatar" class="user-menu__icon avatar-image" src="/assets/images/avatar.png" />
+                <a class="js-toggle-nav" href="#" rel="nofollow"><img alt="shukai zhao&#39;s Avatar" class="user-menu__icon avatar-image" src="/images/avatar.png" />
                 </a></div>
         </div>
     </div>
@@ -67,7 +67,7 @@
         <p>We've been hard at work on the latest version of Deploy. Read about it here <a href='http://blog.atechmedia.com/introducing-deploy-2-0/'>on our blog</a> or get involved in the <a href='https://{{current_account}}.beta.deployhq.com'>open beta</a>.</p>
     </div>
     <div class='box section section--first section--with-create'>
-        <a class="button button--positive button--create section__create" href="/projects/new" title="Create a new project"><img alt="Icon add" class="button__icon" src="/assets/images/icon-add-e0280f31016ead5fa85f6969fbd6f2db.svg" /></a>
+        <a class="button button--positive button--create section__create" href="/projects/new" title="Create a new project"><img alt="Icon add" class="button__icon" src="/assets/icon-add-e0280f31016ead5fa85f6969fbd6f2db.svg" /></a>
         <div class='page-header'>
             <h2 class='page-header__title g-heading-alpha'>Your Projects</h2>
             <p class='page-header__lead'>
@@ -77,7 +77,7 @@
         </div>
     </div>
     <div class='clearfix'>
-        <form accept-charset="UTF-8" action="/users/3471e5ea-a920-5641-1ed9-16609e345521/projects_sort_preference" class="order-preference" id="user_project_sort" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div><div class='action-block clearfix'>
+        <form accept-charset="UTF-8" action="/users/3471e5ea-a920-5641-1ed9-16609e345521/projects_sort_preference" class="order-preference" id="user_project_sort" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div><div class='action-block clearfix'>
             <div class='action-block__sort radio-block js-project-sort'>
                 <strong class='radio-block__label'>Sort:</strong>
                 <label class="radio-block__group" for="user_alphabetic_sort_true"><input class="radio-block__input" id="user_alphabetic_sort_true" name="user[alphabetic_sort]" type="radio" value="true" />
@@ -88,13 +88,13 @@
         </div>
         </form>
 
-        <form accept-charset="UTF-8" action="/users/3471e5ea-a920-5641-1ed9-16609e345521/projects_view_preference" class="edit_user" id="user_project_view" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div><ul class='view-preference layout-list clearfix box'>
+        <form accept-charset="UTF-8" action="/users/3471e5ea-a920-5641-1ed9-16609e345521/projects_view_preference" class="edit_user" id="user_project_view" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div><ul class='view-preference layout-list clearfix box'>
             <li class='view-preference__item'>
-                <a class="view-preference__link  js-view-preference" href="#"><img alt="Icon list table" class="view-preference__icon" src="/assets/images/icon-list-table-1d3083531e7d60e4677a1f896aa3e3cb.svg" /></a>
+                <a class="view-preference__link  js-view-preference" href="#"><img alt="Icon list table" class="view-preference__icon" src="/assets/icon-list-table-1d3083531e7d60e4677a1f896aa3e3cb.svg" /></a>
                 <input class="is-hidden" id="user_compact_view_true" name="user[compact_view]" type="radio" value="true" />
             </li>
             <li class='view-preference__item'>
-                <a class="view-preference__link is-active js-view-preference" href="#"><img alt="Icon list block white" class="view-preference__icon" src="/assets/images/icon-list-block-white-f9dfb5ef9ca2d4b6f399d1e61e04c048.svg" /></a>
+                <a class="view-preference__link is-active js-view-preference" href="#"><img alt="Icon list block white" class="view-preference__icon" src="/assets/icon-list-block-white-f9dfb5ef9ca2d4b6f399d1e61e04c048.svg" /></a>
                 <input checked="checked" class="is-hidden" id="user_compact_view_false" name="user[compact_view]" type="radio" value="false" />
             </li>
         </ul>
@@ -153,7 +153,7 @@
                 </ul>
             </div>
             <div class='column column--quarter'>
-                <a class="footer__branding" href="http://atechmedia.com"><img alt="Atechmedia logo" src="/assets/images/atechmedia-logo-0c4d3f231c616ea3edec833d64afb407.png" /></a>
+                <a class="footer__branding" href="http://atechmedia.com"><img alt="Atechmedia logo" src="/assets/atechmedia-logo-0c4d3f231c616ea3edec833d64afb407.png" /></a>
             </div>
         </div>
         <p class='footer__copyright'>&copy; 2015 <a href="http://atechmedia.com">aTech Media Limited</a>. All rights reserved.</p>
@@ -167,7 +167,7 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Report Bug</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Report Bug</h2>
-                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div>
                         <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/projects?action=index&amp;controller=projects" />
                         <div class='form-group'>
                             <label class="form-label" for="description">Describe Problem</label>
@@ -189,7 +189,7 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Feedback</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Submit Feedback</h2>
-                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="QFy+K8j0wqfIVSkkd89qe/QEo2wgm/4H1FtjcbzE47I=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div>
                         <div class='form-group'>
                             <label class="form-label" for="summary">What do you think?</label>
 <textarea class="textarea" id="description" name="description" rows="6">
@@ -208,8 +208,8 @@
     </div>
 </div>
 
-<script src="/assets/js/cdn.viaduct.io/webpush.js"></script>
-<script src="/assets/js/application-4050524b872d18d5132f11c99b6d4bf2.js"></script>
+<script src="/assets/cdn.viaduct.io/webpush.js"></script>
+<script src="/assets/application-4490436fc5ec79a05e570d20adf462b5.js"></script>
 <script>
     //<![CDATA[
     window.Utility || (window.Utility = {});
@@ -224,19 +224,19 @@
 
     //]]>
 </script>
-<script src='/assets/js/identity/remote.js' type='text/javascript'></script>
+<script src='/assets/identity.atechmedia.com/javascripts/remote.js' type='text/javascript'></script>
 <script>
     //<![CDATA[
     var atechIdentity = new AtechIdentity();
     atechIdentity.host = 'http://pt.justdeployit.com';
     atechIdentity.userKey = '3b2662a4-843b-798f-417b-5755dda2e195';
     atechIdentity.applicationKey = '2a9869df-7c90-3f32-0538-0bec6f4c4129';
-    atechIdentity.expiry = 1421159698;
-    atechIdentity.authHash = 'f4e4c577928fb2de9432c3038e33d2e26c1135ef';
+    atechIdentity.expiry = 1421306605;
+    atechIdentity.authHash = '3b97bbf9a47cf35e73aa58f1f031654b9b37ca4b';
     atechIdentity.getRemoteUserData();
     //]]>
 </script>
 
-<!--- Version 741d36, served by vdtapp-531-9150-c84123b028 -->
+<!--- Version 4f2bf0, served by vdtapp-531-9174-0e671c801d -->
 </body>
 </html>
